# k10-colorado

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
assets/textures/: SOURCES.txt
blender/: live_client.py  live_server.py
docs/: ASSET-ROLLOUT.md  ENGINE-MIGRATION.md  PRO-KN5-CONSTRUCTION.md  ROAD-CONSTRUCTION.md
scripts/: __init__.py  bootstrap_blender.sh  build.sh  config.py
scripts/ac/: build_kn5.py  export_kn5_addon.py  ext_config.py  flythrough.py  kn5_ground_check.py  kn5_write.py  pbr.py  preview.py  render_drive_views.py  track_folder.py  verify_kn5.py
scripts/aerial/: __init__.py  build_aerial.py  detect.py  georef.py  skeleton.py
scripts/capture/: __init__.py  bundle.py  evidence.py  ingest.py  redtiger_gps.py  segment_textures.py  synth.py  textures.py
scripts/elevation/: crossfall.py  heightfield.py
scripts/environment/: build_env.py  make_chainlink.py  make_foliage.py  props.py  signs.py  zones.py
scripts/geometry/: audit_mesh.py  build_mesh.py  drive_test.py  dummies.py  kerbs.py  profile.py  projection.py  ribbon.py  road_text.py
scripts/gps/: centerline.py  connectors_from_kml.py  from_track.py  mapmatch.py  overpass.py  street_labels.py  widths_from_osm.py
scripts/lighting/: __init__.py  csp_config.py  solar.py
scripts/trace/: detect.py  georef.py  match.py  trace_route.py
tracks/: PIT-LANES.md
tracks/aspen/: track.config.json
tracks/grand-junction/: track.config.json
tracks/high-plains/: track.config.json
tracks/imi/: track.config.json
tracks/lookout-lariat/: track.config.json
tracks/pikes-peak/: track.config.json
(+126 files in other folders)
